--- a/src/pages/congratulate/Congratulate.css
+++ b/src/pages/congratulate/Congratulate.css
@@ -1,10 +1,8 @@
-.wrap {
+.congrats-wrap {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #fce3cf;
-  height: 100%;
 }
 
 .header {
