--- a/src/pages/login/LogIn.css
+++ b/src/pages/login/LogIn.css
@@ -2,6 +2,16 @@
   margin: 0 0;
 }
 
+.congrats-login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center;  */
+
+  padding-top: 7.2rem;
+  color: hsl(60, 9%, 2%);
+}
+
 .login-submit-button {
   margin: 0px;
 }
@@ -154,3 +164,8 @@ textarea:focus {
   tablet: 992,
   laptop: 1324,
   desktop: 2024, */
+
+.greeting-congrats {
+  color: hsl(10, 79%, 58%);
+  padding: 40px;
+}
