--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -53,7 +53,6 @@
   padding: 16px;
 }
 
-
 .filterlist-container {
   margin-bottom: 40px;
 }
@@ -79,11 +78,25 @@
   padding: 20px;
 }
 
+.company-list-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.company-list-image-container {
+  display: flex;
+}
+
 .company-list-title {
   font-size: 1.1rem;
   font-weight: 600;
   color: var(--dark-blue);
   margin-bottom: 6px;
+}
+
+.company-list-image {
+  width: 50px;
 }
 
 .company-list-location {
@@ -111,7 +124,7 @@
 }
 
 .filter-badge {
-  padding: 6px;
+  padding: 6px 12px;
   margin-bottom: 4px;
   margin-right: 6px;
   background-color: var(--light-blue);
@@ -152,11 +165,9 @@
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
-.company-list-item a:hover{
-  background-color:  hsl(220, 50%, 99%);
-  ;
+.company-list-item a:hover {
+  background-color: hsl(220, 50%, 99%);
 }
-
 
 .search-input {
   width: 100%;
@@ -165,6 +176,28 @@
   padding: 4px;
   margin-top: 20px;
   border: 1px solid var(--light-blue);
+}
+
+.Work {
+  background-color: hsla(140, 40%, 34%, 1);
+  /* opacity: 0.5; */
+}
+
+.Employment {
+  background-color: hsla(292, 79%, 30%, 0.7);
+}
+
+.Health {
+  background-color: hsla(354, 86%, 54%, 0.7);
+}
+
+.Governance {
+  background-color: hsla(191, 95%, 34%, 0.7);
+}
+
+.filter-name {
+  color: white;
+  opacity: 1;
 }
 
 @media (max-width: 800px) {
