--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -24,7 +24,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   padding-top: 10%;
 }
 
