--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -111,10 +111,25 @@
   margin-top: 8px;
 }
 
-.companies-found {
+.company-list-topbar {
   color: var(--dark-blue);
+  display: flex;
+  justify-content: space-between;
   margin-bottom: 24px;
   font-size: 1rem;
+}
+
+.disabled{
+  display: none;
+}
+
+.company-order-button{
+  background-color: var(--dark-blue);
+  margin: 0;
+  font-size: 0.8rem;
+  width: 60px;
+  padding: 4px;
+
 }
 
 .badges-container {
@@ -200,26 +215,22 @@
   opacity: 1;
 }
 
-.company-paginate-wrapper{
-  width:100%;
+.company-paginate-wrapper {
+  width: 100%;
   display: flex;
   justify-content: center;
 }
-.company-paginate-container{
+.company-paginate-container {
   display: flex;
   justify-content: center;
   width: 300px;
 }
 
-.company-paginate-container li{
+.company-paginate-container li {
   list-style-type: none;
 }
 
-
-
-
 @media (max-width: 1324px) {
-
 }
 
 @media (max-width: 992px) {
@@ -242,22 +253,16 @@
     /* grid-column: span 12; */
     width: 100%;
   }
-
 }
 
 @media (max-width: 768px) {
-
 }
 
 @media (max-width: 640px) {
-
 }
 
 @media (max-width: 576px) {
-
-  
-  .company-list-image-container{
+  .company-list-image-container {
     flex-direction: column;
   }
-
 }
