--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,17 @@ h6 {
   overflow-wrap: break-word;
 }
 
+h2,
+h3,
+h4 {
+  font-family: "Mulish", sans-serif;
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
 #root,
 #__next {
   isolation: isolate;
