--- a/src/pages/about-badges/AboutBadges.css
+++ b/src/pages/about-badges/AboutBadges.css
@@ -27,7 +27,7 @@
 
 .about-badges__title {
   font-size: 2.4rem;
-  font-weight: 700;
+  /* font-weight: 700; */
   color: var(--dark-blue);
   font-family: "Mulish", sans-serif;
 }
@@ -38,7 +38,7 @@
 }
 
 .about-badges__body-text {
-  text-align: justify;
+  text-align: center;
 }
 
 .about-badges__container button {
@@ -59,8 +59,8 @@
 .badge-title {
   text-align: center;
   padding-top: 80px;
-  font-size: 2.4rem;
-  font-weight: 700;
+  /* font-size: 2.4rem; */
+  /* font-weight: 700; */
   line-height: 1.3;
   color: var(--dark-blue);
   font-family: "Mulish", sans-serif;
@@ -82,7 +82,7 @@
 
 .badge__text-container p {
   margin: 0 0 16px 0;
-  text-align: justify;
+  text-align: left;
   padding: 20px 20px 20px 20px;
 }
 
@@ -104,7 +104,7 @@
   flex-direction: center;
   justify-content: center;
   margin-top: 60px;
-  gap: 60px;
+  gap: 48px;
 }
 
 @media (max-width: 900px) {
@@ -116,6 +116,7 @@
   }
   .badge__text-container {
     width: 92%;
+    text-align: center;
   }
 }
 
@@ -126,7 +127,7 @@
   flex-direction: row-reverse;
   justify-content: center;
   margin-top: 60px;
-  gap: 60px;
+  gap: 48px;
 }
 
 @media (max-width: 900px) {
@@ -139,6 +140,10 @@
   .badge__text-container {
     width: 92%;
   }
+
+  .badge__text-container p{
+    text-align: center;
+  }
 }
 
 /* Badge 3 */
@@ -148,7 +153,7 @@
   flex-direction: center;
   justify-content: center;
   margin-top: 60px;
-  gap: 60px;
+  gap: 48px;
 }
 
 @media (max-width: 900px) {
@@ -160,6 +165,7 @@
   }
   .badge__text-container {
     width: 92%;
+    text-align: center;
   }
 }
 
@@ -170,7 +176,7 @@
   flex-direction: row-reverse;
   justify-content: center;
   margin-top: 60px;
-  gap: 60px;
+  gap: 48px;
 }
 
 @media (max-width: 900px) {
@@ -182,5 +188,6 @@
   }
   .badge__text-container {
     width: 92%;
+    text-align: center;
   }
 }
