--- a/src/pages/about-us/AboutUs.css
+++ b/src/pages/about-us/AboutUs.css
@@ -6,8 +6,8 @@
 
 .about-us__main-container h2 {
   margin-bottom: 24px;
-  font-size: 2.4rem;
-  font-weight: 700;
+  /* font-size: 2.4rem; */
+  /* font-weight: 700; */
   line-height: 1.3;
   color: var(--dark-blue);
   font-family: "Mulish", sans-serif;
@@ -35,7 +35,7 @@
 }
 
 .about-us__body-text {
-  text-align: justify;
+  text-align: center;
   margin-top: 4%;
   font-family: "Work Sans", sans-serif;
   font-size: 1.2rem;
@@ -43,7 +43,7 @@
 }
 
 .about-us__body-text__container {
-  margin-bottom: 40px;
+  margin-bottom: 80px;
 }
 
 .about-us__row-container {
@@ -56,6 +56,9 @@
   padding: 12px 24px 24px 24px;
   gap: 44px;
   width: 100%;
+  color: var(--dark-blue);
+  border-radius: 8px;
+
 }
 
 .about-us__card-container {
@@ -66,8 +69,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
-    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 8px;
+  border-radius: 8px;
+
   margin: 8px;
   background-color: rgba(255, 255, 255);
   gap: 8px;
@@ -105,4 +109,18 @@
   width: 50px;
   height: 50px;
   margin: 4px 4px 4px 4px;
+}
+
+@media(max-width: 800px){
+  .about-us__container{
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-bottom: 4%;
+  }
+}
+
+@media(max-width: 688px){
+  .about-us__card-container{
+    width: 100%;
+  }
 }
