--- a/src/pages/companies/company-detail/CompanyDetail.css
+++ b/src/pages/companies/company-detail/CompanyDetail.css
@@ -24,6 +24,7 @@
   /* background-color: hsl(220, 50%, 97%); */
   padding: 40px 40px 40px 40px;
   background-color: hsl(220, 50%, 97%);
+  border-radius: 8px;
 }
 
 .company-header__container {
@@ -66,8 +67,8 @@
 }
 
 .company-badges h3 {
-  font-size: 2rem;
-  font-weight: 700;
+  font-size: 1.8rem;
+  /* font-weight: 700; */
   line-height: 1.3;
   color: var(--dark-blue);
   font-family: "Mulish", sans-serif;
@@ -151,6 +152,12 @@
   text-align: center;
 }
 
+.company-detail-badge p{
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
 .company-detail-badge img {
   width: 100px;
 }
@@ -165,4 +172,32 @@
 .no-badges {
   margin-top: 0px !important;
   margin-bottom: 24px;
+}
+
+
+@media (max-width: 1324px) {
+}
+
+@media (max-width: 992px) {
+  .company-badges__container{
+    gap: 12px;
+  }
+
+}
+
+@media (max-width: 768px) {
+
+  .company-detail-container{
+    padding-inline: 32px;
+  }
+  .company-header__container{
+    width: 100%;
+  }
+}
+
+@media (max-width: 640px) {
+}
+
+@media (max-width: 576px) {
+
 }
