--- a/src/pages/companies/company-home.css
+++ b/src/pages/companies/company-home.css
@@ -1,9 +1,9 @@
 .line {
-  border: 1px solid var(--light-blue);
+  border: 1px solid hsl(220, 50%, 96%);
 }
 
 .filter-line {
-  border: 1px solid var(--light-blue);
+  border: 1px solid hsl(220, 50%, 93%);
   margin-bottom: 24px;
 }
 
@@ -48,9 +48,10 @@
   height: fit-content;
   width: 30%;
   /* background-color: var(--light-blue); */
-  border: 1px solid var(--light-blue);
+  /* border: 1px solid hsl(220, 50%, 93%); */
+  border-radius: 8px;
   background-color: hsl(220, 50%, 98%);
-  padding: 16px;
+  padding: 24px;
 }
 
 .filterlist-container {
@@ -74,8 +75,9 @@
   width: 70%;
   list-style-type: none;
   margin-bottom: 40px;
-  background-color: hsl(220, 50%, 97%);
-  padding: 20px;
+  background-color: hsl(220, 50%, 98%);
+  padding: 24px;
+  border-radius: 8px;
 }
 
 .company-list-header {
@@ -92,7 +94,7 @@
 
 .company-list-title {
   font-size: 1.1rem;
-  font-weight: 600;
+  font-weight: 900;
   color: var(--dark-blue);
 }
 
@@ -190,8 +192,10 @@
   height: 40px;
   border: none;
   padding: 4px;
+  padding-inline: 8px;
   margin-top: 20px;
   border: 1px solid var(--light-blue);
+  border-radius: 8px;;
 }
 
 .Work {
@@ -263,7 +267,20 @@
 }
 
 @media (max-width: 576px) {
-  .company-list-image-container {
+
+  .company-container{
+    padding-top: 128px;
+  }
+
+  .company-header-title{
+    line-height: 1.3;
+  }
+  .company-list-header{
     flex-direction: column;
+
+  }
+  .company-list-image-container {
+    margin-top: 4px;
+    margin-bottom: 4px;
   }
 }
