--- a/src/pages/form/Form.css
+++ b/src/pages/form/Form.css
@@ -1,6 +1,9 @@
 .questionnaire {
   /* margin: 20px; */
-  padding: 120px;
+  /* margin: 20px; */
+  padding-inline: 48px;
+  padding-top: 160px;
+  /* padding-bottom: 80px; */
 }
 
 .head-quest {
@@ -116,6 +119,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .head-confirm {
@@ -139,4 +144,13 @@
 
 .confirm-p {
   color: #302b70;
+}
+
+@media (max-width: 800px) {
+  .questionnaire {
+    /* margin: 20px; */
+    padding-inline: 48px;
+    padding-top: 160px;
+    padding-bottom: 80px;
+  }
 }
