css updates, footer

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -20,7 +20,7 @@
   align-items: center;
   font-family: "Work Sans", sans-serif;
   font-weight: 500;
-  font-size: 1em;
+  font-size: 1rem;
   background-color: var(--light-pink);
   z-index: 999;
   margin-right: 0px;
