--- a/src/pages/login/LogIn.css
+++ b/src/pages/login/LogIn.css
@@ -20,6 +20,8 @@
   /* display: flex;
   flex-direction: column;
   align-items: center; */
+  position: relative;
+  min-height: 100vh;
   padding-top: 160px;
   /* margin: 0 auto;
   width: fit-content; */
