--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -3,6 +3,7 @@
 }
 
 .sign-up-container {
+  position: relative;
   padding-top: 160px;
 }
 
@@ -14,6 +15,11 @@
   border-radius: 6px;
   margin-bottom: 64px;
 }
+
+.sign-up-content-container{
+  padding-bottom: 72px;
+}
+
 
 .sign-up-form-container label {
   font-weight: 500;
