--- a/src/pages/form/FormStart.css
+++ b/src/pages/form/FormStart.css
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  height: 100%;
+  min-height: 960px;
   width: 100%;
   padding-bottom: 100px;
 }
@@ -10,6 +10,7 @@
 }
 
 .survey-intro__container {
+  height: fit-content;
   max-width: 1400px;
   display: flex;
   flex-direction: column;
@@ -17,7 +18,7 @@
   padding-right: 4%;
   padding-left: 4%;
   padding-top: 160px;
-  height: 100vh;
+  /* height: 100vh; */
   margin: 0 auto;
 
 }
@@ -61,11 +62,19 @@
   padding-bottom: 6%;
 }
 
-@media (max-width: 460px) {
+@media (max-width: 500px) {
   .buttons {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .container {
+    position: relative;
+    min-height: 960px;
+    height: 100%;
+    width: 100%;
+    padding-bottom: 100px;
   }
 }
 
